fix alignment of images

--- a/css/style.scss
+++ b/css/style.scss
@@ -2,8 +2,29 @@
 @use "./base/variables" as *;
 @use "./base/fonts";
 @use "./base/mixins" as *;
+/* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #548aa0 #ffffff;
+  }
 
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 19px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #548aa0;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
 body {
+  
     font-family: Poppins,sans-serif;
     font-weight: 400;
     font-size: 2.5rem;
@@ -11,6 +32,9 @@ body {
   }
   .hamburger{
     visibility: hidden;
+    svg{
+      color: $lightblue;
+    }
   }
   
   .btn {
@@ -47,7 +71,7 @@ body {
 }
  
   .content_landingpage {
-    transition: all .3s;
+    transition: all 300ms;
     max-width: 1440px;
     margin: 0 auto;
     height: 90vh;
@@ -181,14 +205,16 @@ body {
   }
  
   .firstpage_content {
+    
 
     display: flex;
     background-color: $white;
     color: $black;
     height: 80vh;
-     max-width: 1440px;
+    max-width: 1440px;
      justify-content: center;
      align-items: center;
+     margin: 0 auto;
      
   
     .firstpage_col_1 {
@@ -684,6 +710,7 @@ body {
       padding-left: 14rem;
       padding-right: 14rem;
       margin: 0 auto;
+      margin-top: 5rem;
     
   
       h2 {
@@ -846,7 +873,7 @@ body {
       .third {
         display: flex;
         flex-direction: column;
-        align-items: flex-end;
+        align-items: flex-end;        
   
         h3 {
           margin-bottom: 1.5rem;
@@ -856,41 +883,45 @@ body {
         p {
           margin-bottom: 5rem;
         }
-  
-        form {
-          background-color: #fcc302;
-          display: flex;
-          align-items: center;
-  
-          input {
-            height: 9rem;
-            min-width: 38rem;
-            padding-left: 2rem;
-            padding-right: 2rem;
-            font-weight: 400;
-            font-size: 2rem;
-            background-color: #fcc302;
-            outline: none;
-            border: none;
-            color: #fff;
-          }
-  
-          button {
-            height: 9rem;
-            width: 15rem;
-            border: none;
-            background-color: #00bec9;
-            color: #fff;
-            font-size: 2.5rem;
-            cursor: pointer;
-  
-            &:hover {
+       
+       
+          form {
+            
+            display: flex;
+            align-items: center;
+            position: absolute;
+    
+            input {
+              height: 9rem;
+              min-width: 38rem;
+              padding-left: 2rem;
+              padding-right: 2rem;
+              font-weight: 400;
+              font-size: 2rem;
+              background-color: #fcc302;
+              outline: none;
+              border: none;
               color: #fff;
+            }
+    
+            button {
+              height: 9rem;
+              width: 15rem;
+              border: none;
               background-color: #00bec9;
+              color: #fff;
+              font-size: 2.5rem;
+              cursor: pointer;
+    
+              &:hover {
+                color: #fff;
+                background-color: #00bec9;
+              }
             }
           }
-        }
-  
+    
+        
+       
         ul {
           display: flex;
           margin-top: 5rem;
@@ -1075,14 +1106,36 @@ body {
 
   
   @media screen and (max-width: 625px) {
+    /* ===== Scrollbar CSS ===== */
+  /* Firefox */
+  * {
+    scrollbar-width: auto;
+    scrollbar-color: #548aa0 #ffffff;
+  }
+
+  /* Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  *::-webkit-scrollbar-track {
+    background: #ffffff;
+  }
+
+  *::-webkit-scrollbar-thumb {
+    background-color: #548aa0;
+    border-radius: 10px;
+    border: 3px solid #ffffff;
+  }
+
+    body{
+      overflow-x:hidden;
+    }
 
     .topnav{
       visibility: hidden;
-      position: fixed;
     }
-    .topnav_bgc{
-      position: fixed;
-    }
+    
 
     .hamburger{
       visibility: visible;
@@ -1132,7 +1185,12 @@ body {
 }
   
 .thirdpage{
+ 
+  .container{
     margin-right: 5rem;
+    
+
+  }
 }
   
   
@@ -1182,7 +1240,7 @@ body {
         height: fit-content;
       
         margin-bottom:14rem;
-        margin-top: 14rem;
+        
         width: 100%;     
         
       
@@ -1213,11 +1271,15 @@ body {
       max-width: 100%;
     }
   
-    .sixtpage .container {
-      .cards {
-        flex-direction: column;
-        
-      }
+    .sixtpage {
+      .container {
+    padding-top: 0rem;
+        .cards {
+          flex-direction: column;
+          
+        }
+
+    }
   
       .card {
         height: 100%;
